--- a/parallax.html
+++ b/parallax.html
@@ -5,114 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Parallax Effect</title>
-    <style>
-        :root{
-            font-size: 10px;
-        }
-        body{
-            margin: 0;
-        }
-        .container{
-            position: relative;
-            min-height: 100vh;
-            min-width: 100%;
-            background: #eee;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 2.8rem;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .parallax{
-            background: url('images/image_2.jpg');
-            background-size: cover;
-            filter: hue-rotate(3deg);
-            color: white;
-            background-attachment: fixed;
-            background-size: cover;
-            font-size: 3rem;
-        }
-        .float{
-            position: absolute;
-            bottom: 4rem;
-            width: 100%;
-            left: 0;
-            display: flex;
-            justify-content: center;
-        }
-        .btn{
-            background: url('images/float-down.png');
-            width: 3rem;
-            height: 3rem;
-            background-size: contain;
-            transition: all 300ms;
-            background-repeat: no-repeat;
-            animation: jump 800ms ease-in-out infinite alternate;
-        }
-        .footer{
-            background: rgba(57, 44, 156,0.9);
-            width: 100%;
-            position: fixed;
-            bottom: 0px;
-            height: 8vh;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            color: #fff;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 1.8rem;
-        }
-        .footer .links img:hover{
-            transform: scale(1.3);
-            transition: all 300ms;
-        }
-        @keyframes jump{
-            from{
-                transform: translateY(-10px);
-            }
-            to{
-                transform: translateY(0px);
-            }
-        }
-        @media (max-width:720px){
-            :root{
-                font-size: 8px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
 </head>
+
 <body>
     <div class="container">
         Your Content Here...Scroll Down
         <div class="float">
             <div class="btn"></div>
-    </div>
-        
+        </div>
+
     </div>
     <div class="container parallax" id="parallax">
         Parallax Container
     </div>
     <div class="container">
-            Secondary Content Here
+        Secondary Content Here
+    </div>
+
+    <div class="footer">
+        <div class="name">Made By Samyak Jain</div>
+        <div class="title">
+            CSS Parallax Effect
         </div>
-       
-        <div class="footer">
-            <div class="name">Made By Samyak Jain</div>
-            <div class="title">
-                    CSS Parallax Effect
-                </div>
-            <div class="links">
-            <a href="https://github.com/jainsamyak" target="_blank"><img src="images/github.png" alt="" height="25"></a>
+        <div class="links">
+            <a href="https://github.com/jainsamyak" target="_blank">
+                <img src="images/github.png" alt="" height="25">
+            </a>
             &nbsp;
-            <a href="https://samyak-jain.wixsite.com/home" target="_blank"><img src="images/web.png" alt="" height="25"></a>
+            <a href="https://samyak-jain.wixsite.com/home" target="_blank">
+                <img src="images/web.png" alt="" height="25">
+            </a>
             &nbsp;
-            <a href="https://www.linkedin.com/in/samyakjain330" target="_blank"><img src="images/linkedin.png" alt="" height="25"></a>
-            </div>
+            <a href="https://www.linkedin.com/in/samyakjain330" target="_blank">
+                <img src="images/linkedin.png" alt="" height="25">
+            </a>
         </div>
+    </div>
 </body>
 <script>
-    function scroll_down(id_to_div){
+    function scroll_down(id_to_div) {
         document.getElementById(id_to_div).scrollIntoView();
     }
 </script>
+
 </html>
